# llm-swarm-router

./: .editorconfig  .gitattributes  .gitignore  .graphifyignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  config.example.toml  netllm  pyproject.toml
.agents/: AGENTS.md
.claude/: settings.json
.cursor/: hooks.json  mcp.json.example
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
Formula/: netllm.rb
apps/: AGENTS.md
archived/: ARCHIVE_LOG.txt
assets/: README.md
docs/: AGENTS.md  README.md  architecture-reference.md  ci-and-release.md  cli-routing-research.md  cli-source-routing-plan.md  cloud-providers-plan.md  config-guards-audit.md  config-schema-rewrite-plan.md  editor-integration.md  honcho-integration.md  lint-index.md  linux-install.md  linux-troubleshooting.md  macos-code-signing.md  macos-install.md  macos-troubleshooting.md  menubar-app.md  models-ux-plan.md  platform-matrix.md  routing-hardening-plan.md  sdk-versions.md  telemetry-api.md  turnstone-integration.md  turnstone-lessons.md  windows-install.md  windows-troubleshooting.md
packaging/: AGENTS.md  README.md  build.py  venvstacks.toml
scripts/: agent-verify-setup.sh  benchmark-parity.sh  ci.sh  emulate-user-install-linux.sh  emulate-user-install-mac.sh  emulate-user-install-windows.ps1  generate-dashboard-tokens.py  graphify-scoped-update.py  sync-agent-skills.sh  test-brand-icons.sh  test-menubar-e2e.sh  test-menubar-lifecycle.sh  upgrade-mac-app.sh  verify-before-pr.sh
tests/: AGENTS.md  test_admin_cloud.py  test_admin_harnesses.py  test_agent.py  (+61 more)
(+155 files in other folders)
