[project]
name = "netllm"
version = "0.4.4.0"
description = "Network LLM router — swarm agents with OpenAI-compatible gateway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "netllm-cli",
]

[project.scripts]
netllm = "netllm_cli.main:app"

[project.optional-dependencies]
# Deprecated alias — zeroconf ships with netllm-discovery by default.
mdns = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/netllm"]

[tool.uv.workspace]
members = [
    "packages/netllm-core",
    "packages/netllm-sdk-openai",
    "packages/netllm-sdk-anthropic",
    "packages/netllm-discovery",
    "packages/netllm-agent",
    "packages/netllm-cli",
]

[tool.uv.sources]
netllm-core = { workspace = true }
netllm-sdk-openai = { workspace = true }
netllm-sdk-anthropic = { workspace = true }
netllm-discovery = { workspace = true }
netllm-agent = { workspace = true }
netllm-cli = { workspace = true }

[dependency-groups]
dev = [
    "netllm-cli",
    "netllm-agent",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "basedpyright>=1.20",
    "httpx>=0.28",
    "venvstacks>=0.5",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
    "packages/netllm-sdk-openai/tests",
    "packages/netllm-sdk-anthropic/tests",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
